Fixed install error messages and documentation.
Misunderstood the way files go together to make up a perl distribution.
The previous distro worked, but gave error messages when installing.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for p5-Bio-Seqware-Config
 0.000.002 (pre-release)
     [DOC] - Modified POD structure to match updated template.
             Fixed some formating issues.
+    [BUGFIX] - Corrected installation error messages
 
 0.000.001 2013-07-27 19:00:00 EST
     [MAJOR] - Initial version
