--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for p5-Bio-SeqWare-Config
 
+0.000.004 PRE-RELEASE
+
+
 0.000.003 2013-08-19 14:30:00 EST
     [API] - Added new SeqWare settings: uploadBamBaseDir & uploadFastqBaseDir
     [DEV] - Cleaned up .gitignore and MANIFEST.SKIP files
